--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
   <body>
     <div class="banner-wrap">
       <nav>
-        <img src="./assets/logo.png" alt="Netflix Logo" />
-        <a href="https://www.netflix.com/za/login" target="_blank">Sign In</a>
+        <img class="logo" src="./assets/logo.png" alt="Netflix Logo" />
+        <a
+          class="sign-in-btn"
+          href="https://www.netflix.com/za/login"
+          target="_blank"
+          >Sign In</a
+        >
       </nav>
 
       <div class="banner-container">
